# canto_andriod

./: README.md  build.gradle  gradle.properties
Superpowered/: Superpowered3BandEQ.h  (+27 more)
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/mappings/: mapping-cafebazaar.txt  mapping-googleplay.txt
app/schemas/com.hmomeni.canto.persistence.AppDatabase/: 1.json
app/src/androidTest/java/com/hmomeni/canto/: ExampleInstrumentedTest.kt  SearchFragmentTest.kt
app/src/cafebazaar/: AndroidManifest.xml
app/src/iranapps/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Dubsmash.cpp  EditDubsmash.cpp  EditSinging.cpp  Karaoke.cpp  Player.cpp  Player.h  Singing.cpp  Store.cpp  native-lib.cpp
app/src/main/java/com/hmomeni/canto/: App.kt  DownloadService.kt  MainActivity.kt  PlayerActivity.kt
app/src/main/java/com/hmomeni/canto/activities/: BaseActivity.kt  BaseFullActivity.kt  CameraActivity.kt  DubsmashActivity.kt  EditActivity.kt  EditUserActivity.kt  EditUserFragment.kt  InfoActivity.kt  InfoFragment.kt  KaraokeActivity.kt  LoginActivity.kt  MainActivity.kt  PaymentActivity.kt  PlayerActivity.kt  ShopActivity.kt  SingingActivity.kt  VideoPlayActivity.kt
app/src/main/java/com/hmomeni/canto/api/: Api.kt
app/src/main/java/com/hmomeni/canto/di/: ApiModule.kt  AppModule.kt  DIComponent.kt  RoomModule.kt
app/src/main/java/com/hmomeni/canto/entities/: ApiResponse.kt  Artist.kt  Avatar.kt  Banner.kt  CantoFile.kt  CompleteProject.kt  Content.kt  CoverPhoto.kt  FullPost.kt  Genre.kt  HomeFeed.kt  Karaoke.kt  MidiItem.kt  MuxJob.kt  Owner.kt  PaymentPackage.kt  Post.kt  Project.kt  Song.kt  Track.kt  User.kt  UserAction.kt  UserInventory.kt  VideoFeedItem.kt
app/src/main/java/com/hmomeni/canto/fragments/: BaseFragment.kt  EditUserFragment.kt  InfoFragment.kt  ListFragment.kt  MainFragment.kt  ProfileFragment.kt  RecorderFragment.kt  SampleFragment.kt  SearchFragment.kt  VideoFeedFragment.kt  VideoPlayFragment.kt
app/src/main/java/com/hmomeni/canto/persistence/: AppDatabase.kt  PostDao.kt  ProjectDao.kt  TrackDao.kt  UserDao.kt
app/src/main/java/com/hmomeni/canto/services/: DownloadService.kt  FFMpegService.kt  MuxerService.kt
app/src/main/res/drawable/: bg_more_icon.xml  bg_search_input.xml  confirm_btn_bg.xml  confirm_btn_bg_vertical.xml  dialog_bg.xml  dialog_payment_bg.xml  gradient_dubsmash.xml  gradient_index_rect.xml  gradient_index_rect_round.xml  gradient_karaoke.xml  gradient_singing.xml  ic_10_back.xml  ic_arrow_down.xml  ic_arrow_up.xml  ic_bracket_left.xml  ic_bracket_right.xml  ic_canto_logo.xml  ic_canto_text.xml  ic_close.xml  ic_ef_echo.xml  ic_ef_echo_disabled.xml  ic_ef_flanger.xml  ic_ef_flanger_disabled.xml  ic_ef_none.xml  ic_ef_none_disabled.xml  ic_ef_pitch.xml  ic_ef_pitch_disabled.xml  ic_ef_reverb.xml  ic_ef_reverb_disabled.xml  ic_error.xml  ic_grid.xml  ic_home.xml  ic_list.xml  ic_mic_low.xml  ic_mic_mid.xml  ic_more.xml  ic_music_volume_hi.xml  ic_music_volume_low.xml  ic_music_volume_mid.xml  ic_pause_circle.xml  (+30 more)
app/src/main/res/layout/: activity_dubsmash.xml  activity_edit.xml  activity_edit_user.xml  activity_info.xml  activity_karaoke.xml  activity_login.xml  activity_main.xml  activity_payment.xml  activity_player.xml  activity_shop.xml  activity_singing.xml  activity_video_play.xml  dialog_alert.xml  dialog_payment.xml  dialog_progress.xml  fragment_edit_user.xml  fragment_info.xml  fragment_list.xml  fragment_main.xml  fragment_profile.xml  fragment_recorder.xml  fragment_search.xml  fragment_videofeed.xml  login_buttons_wrapper.xml  login_code_input_wrapper.xml  login_phone_input_wrapper.xml  rcl_item_avatar.xml  rcl_item_banner.xml  rcl_item_genre.xml  rcl_item_grid_post.xml  rcl_item_list_post.xml  rcl_item_midi.xml  rcl_item_payment_pack.xml  rcl_item_post.xml  rcl_item_post_rect.xml  rcl_item_project_portrait.xml  rcl_item_project_square.xml
app/src/main/res/menu/: main_bottom_nav.xml
app/src/main/res/navigation/: main_nav.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimen.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/xml/: filepaths.xml
app/src/myket/: AndroidManifest.xml
app/src/test/: AndroidManifest.xml
app/src/test/java/com/hmomeni/canto/: ExampleUnitTest.kt  TestApp.kt
(+105 files in other folders)
